<resources>
    <string name="app_name">SweeMadve</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string-array name="maps">
        <item>Fountain Area</item>
        <item>Bamboo Lawn</item>
        <item>Main Entrance</item>
        <item>Pavilion Area</item>
        <item>Pool Area</item>
        <item>Dining Hall</item>
        <item>Banquet Hall</item>
    </string-array>
    <string name="food">Food</string>
    <string name="dress">Dress</string>
    <string name="upper_more_1">Photos</string>
    <string name="upper_more_2">Option2</string>
    <string name="upper_more_3">Option3</string>
    <string name="Breakfast_24">24_breakfast</string>
    <string name="Breakfast_25">25_breakfast</string>
    <string name="Breakfast_26">26_breakfast</string>
    <string name="Lunch_24">24_lunch</string>
    <string name="Lunch_25">25_lunch</string>
    <string name="Lunch_26">26_lunch</string>
    <string name="Snacks_24">24_snack</string>
    <string name="Snacks_25">25_snack</string>
    <string name="Snacks_26">26_snack</string>
    <string name="Dinner_24">24_dinner</string>
    <string name="Dinner_25">25_dinner</string>
    <string name="Dinner_26">26_dinner</string>
    <string name="maayra">Maayra</string>
    <string name="baaleShastra">Baale Shastra</string>
    <string name="mehendi">Mehendi</string>
    <string name="sangeet">Sangeet</string>
    <string name="haldi">Haldi</string>
    <string name="baarat">Baarat</string>
    <string name="dhaare">Dhaare</string>
    <string name="bollywoodNight">BollyWood Night</string>
    <string name="Menu_Click_Here">Menu: <a href="">Click_Here</a></string>
    <string name="Dress_Click_Here">Dress Code: <a href="">Click_Here</a></string>
    <string name="Lunch_24_Header">LUNCH</string>
    <string name="Lunch_24_Contents">"Lunch Time!"</string>
    <string name="Lunch_24_timings">Timings: 12:30 PM</string>
    <string name="Lunch_24_Upper_Venue">Venue: Pavilion Hall</string>
    <string name="Lunch_24_venue">Venue: <a href="">Pavilion Hall</a></string>
    <string name="Baale_Shastra_Header">BALE SHASTRA</string>
    <string name="Baale_Shastra_content">"Bale in Kannada means bangles. This is a pre-wedding ritual when the bride goes for a puja to seek almighty's blessing at the mandir and then there is a bangle ceremony held where the bride gives bangles to the closest married women in her family.</string>
    <string name="Baale_Shastra_Timings">Timings: 2:00 PM</string>
    <string name="Baale_Shastra_Upper_Venue">Venue: Fountain Area</string>
    <string name="Baale_Shastra_Venue">Venue: <a href="">Fountain Area</a></string>
    <string name="Maayra_header">MAAYRA</string>
    <string name="Maayra_content">"Referred to as the Maternal Uncle’s Ceremony, the Mayra is when the maternal uncle brings gifts for the mother of the bride and the groom. Among these gifts are the mothers’ dresses for the wedding.</string>
    <string name="Maayra_timings">Timings: 3:00 PM</string>
    <string name="Maayra_Upper_Venue">Venue: Pavilion Hall </string>
    <string name="Maayra_venue">Venue: <a href="">Pavilion Hall</a></string>
    <string name="Mehendi_header">MEHENDI</string>
    <string name="Mehendi_content">"There is no better way to elaborate the significance of these delicate henna designs which blossom on the palms and feet of a bride-to-be. A traditional aspect of the ancient Solah Shringaar, the Mehndi is an inalienable part of an Indian bride's wedding look.</string>
    <string name="Mehendi_timings">Timings: 2:00 PM</string>
    <string name="Mehendi_Upper_Venue">Venue: Fountain Area </string>
    <string name="Mehendi_venue">Venue: <a href="">Fountain Area</a></string>
    <string name="Snacks_24_header">SNACKS</string>
    <string name="Snacks_24_content">Yum</string>
    <string name="Snacks_24_timings">Timings: 5:00 PM</string>
    <string name="Snacks24_Upper_Venue">Venue: Pavilion Hall </string>
    <string name="Snacks_24_venue">Venue: <a href="">Pavilion Hall</a></string>
    <string name="Sangeet_header">SANGEET</string>
    <string name="Sangeet_content">"The word “Sangeet“ means  music, but when it is used as a term to describe a celebratory event during an Indian wedding it translates to Music Night or Musical party. This musical night is a celebration of the union of not only the couple but the bonding of both families.</string>
    <string name="Sangeet_timings">Timings: 6:00 PM</string>
    <string name="Sangeet_Upper_Venue">Venue: Bamboo Lawns </string>
    <string name="Sangeet_venue">Venue: <a href="">Bamboo Lawns</a></string>
    <string name="Dinner_24_header">DINNER</string>
    <string name="Dinner_24_content">Dinner time!</string>
    <string name="Dinner_24_timings">Timings: 8:30 PM</string>
    <string name="Dinner24_Upper_Venue">Venue: Bamboo Lawns </string>
    <string name="Dinner_24_venue">Venue: <a href="">Bamboo Lawns</a></string>
    <string name="Bollywood_party_header">BOLLYWOOD PARTY</string>
    <string name="Bollywood_party_content">A Bollywood party mimics the costumes worn by Bollywood actors and actresses. This party is typically filled with bright colors and exotic fabrics.</string>
    <string name="Bollywood_party_timings">Timings: 10:00 PM</string>
    <string name="Bollywood_Party_Upper_Venue">Venue: Bamboo Lawns </string>
    <string name="Bollywood_party_venue">Venue: <a href="">Bamboo Lawns</a></string>
    <string name="Breakfast_25_Header">BREAKFAST</string>
    <string name="Breakfast_25_Contents">"Come eat"</string>
    <string name="Breakfast_25_timings">Timings: 8:00 AM</string>
    <string name="Breakfast_25_Upper_Venue">Venue: Pavilion Hall</string>
    <string name="Breakfast_25_venue">Venue: <a href="">Pavilion Hall</a></string>
    <string name="Haldi_Header">HALDI</string>
    <string name="Haldi_Contents">"Haldi functions are immensely entertaining and have great cultural significance. We apply Haldi on the face, neck, hands, and feet of the bride and groom, and we also like singing old songs and dancing"</string>
    <string name="Haldi_timings">Timings: 9:00 AM</string>
    <string name="Haldi_Upper_Venue">Venue: Pool Area</string>
    <string name="Haldi_venue">Venue: <a href="">Pool Area</a></string>
    <string name="Lunch_25_Header">LUNCH</string>
    <string name="Lunch_25_Contents">"Come eat"</string>
    <string name="Lunch_25_timings">Timings: 12:30 PM</string>
    <string name="Lunch_25_Upper_Venue">Venue: Pavilion Hall</string>
    <string name="Lunch_25_venue">Venue: <a href="">Pavilion Hall</a></string>
    <string name="Baarat_Header">BAARAT</string>
    <string name="Baarat_Contents">"A baraat is a celebratory wedding procession for the groom involving live music and dancing"</string>
    <string name="Baarat_timings">Timings: 3:00 PM</string>
    <string name="Baarat_Upper_Venue">Venue: Main Entrance</string>
    <string name="Baarat_venue">Venue: <a href="">Main Entrance</a></string>
    <string name="Snacks_25_Header">SNACKS</string>
    <string name="Snacks_25_Contents">"Come eat"</string>
    <string name="Snacks_25_timings">Timings: 5:00 PM</string>
    <string name="Snacks_25_Upper_Venue">Venue: Baraat Swaagat</string>
    <string name="Snacks_25_venue">Venue: Baraat Swaagat></string>
    <string name="Phere_Header">PHERE</string>
    <string name="Phere_Contents">"This significant ceremony marks the ultimate union of a bride and groom and proclaims them as husband and wife. it is not just taking seven rounds around a sacred fire that binds them in the matrimonial bond but also the promises that they make to each other while doing these circumambulations"</string>
    <string name="Phere_timings">Timings: 5:30 PM</string>
    <string name="Phere_Upper_Venue">Venue: Bamboo Lawns</string>
    <string name="Phere_venue">Venue: <a href="">Bamboo Lawns</a></string>
    <string name="Dinner_25_Header">DINNER</string>
    <string name="Dinner_25_Contents">"Dinner time!"</string>
    <string name="Dinner_25_timings">Timings: 7:15 PM</string>
    <string name="Dinner_25_Upper_Venue">Venue: Pavilion Hall</string>
    <string name="Dinner_25_venue">Venue: <a href="">Pavilion Hall</a></string>
    <string name="Breakfast_26_Header">BREAKFAST</string>
    <string name="Breakfast_26_Contents">"Come eat"</string>
    <string name="Breakfast_26_timings">Timings: 7:30 AM</string>
    <string name="Breakfast_26_Upper_Venue">Venue: Main Dining Hall</string>
    <string name="Breakfast_26_venue">Venue: <a href="">Main Dining Hall</a></string>
    <string name="Dhaare_Header">DHAARE</string>
    <string name="Dhaare_Contents">"Dhare Herdu custom is performed by the bride's parents as a gesture of giving away their daughter to the bridegroom. The bride's hand is placed in her husband's hand and a coconut and beetle leaves are kept on their hands. Then the parents pour a few drops of holy water on their hands."</string>
    <string name="Dhaare_timings">Timings: 8:30 AM</string>
    <string name="Dhaare_Upper_Venue">Venue: Banquet Hall</string>
    <string name="Dhaare_venue">Venue: <a href="">Banquet Hall</a></string>
    <string name="Lunch_26_Header">LUNCH</string>
    <string name="Lunch_26_Contents">"Come eat"</string>
    <string name="Lunch_26_timings">Timings: 12:00 PM</string>
    <string name="Lunch_26_Upper_Venue">Venue: Main Dining Hall</string>
    <string name="Lunch_26_venue">Venue: <a href="">Main Dining Hall</a></string>
    <string name="maayraMenContents">Men, pick a white kurta pajama with bandhani or leheriya dupatta</string>
    <string name="maayraWomenContents">Rajasthani attire with bore and nath</string>
    <string name="baaleShastraMenContents">Hues of Pastels/Florals</string>
    <string name="baaleShastraWomenContents">Hues of Pastels/Florals</string>
    <string name="baaleShastraTimings">24 Jan 2:00 pm</string>
    <string name="baaleShastraSlogan">Eezy Breezy</string>
    <string name="baaleShastraSide">"Bride's Side"</string>
    <string name="mehendiMenContents">Hues of Pastels/Florals.Green would be a good choice</string>
    <string name="mehendiWomenContents">Hues of Pastels/Florals.Green would be a good choice</string>
    <string name="mehendiTimings">24 Jan 2:00 pm</string>
    <string name="mehendiSlogan">Eezy Breezy</string>
    <string name="mehendiSide">"Common"</string>
    <string name="sangeetMenContents">Pick any ethnic dress you like</string>
    <string name="sangeetWomenContents">Pick any ethnic dress you like</string>
    <string name="sangeetTimings">24 Jan 6:00 pm</string>
    <string name="sangeetSlogan">Get Your Bling On</string>
    <string name="sangeetSide">"Groom's Side"</string>
    <string name="haldiMenContents">Dress up the way you want but yellow is your color</string>
    <string name="haldiWomenContents">Dress up the way you want but yellow is your color</string>
    <string name="haldiTimings">25 Jan 9:00 am</string>
    <string name="haldiSlogan">Yellow Theme</string>
    <string name="haldiSide">"Common"</string>
    <string name="baaratMenContents">Channel your inner Shah Rukh Khan from K3G by wearing Sherwani</string>
    <string name="baaratWomenContents">Channel your inner Kajol from K3G by wearing Lehenga</string>
    <string name="baaratTimings">25 Jan 5:30 pm</string>
    <string name="baaratSlogan">Traditional Theme</string>
    <string name="baaratSide">"Groom's Side"</string>
    <string name="dhaareMenContents">Drape yourself with Lungi and a Shirt, add Shalya and Goggles to complement</string>
    <string name="dhaareWomenContents">Drape yourself with Silk Saree and deck yourself with temple jewellery</string>
    <string name="dhaareTimings">25 Jan 5:30 pm</string>
    <string name="dhaareSlogan">Carnatic Theme</string>
    <string name="dhaareSide">"Bride's Side"</string>
    <string name="bollywoodNightMenContents">Show your creativity by mimicking some famous Bollywood attire</string>
</resources>