<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/menu_1"
        android:title="@string/home"/>
    <item
        android:id="@+id/events"
        android:enabled="true"
        android:icon="@drawable/menu_1"
        android:title="@string/events"/>
    <item
        android:id="@+id/maps"
        android:enabled="true"
        android:icon="@drawable/menu_2"
        android:title="@string/maps"/>
    <item
        android:id="@+id/food"
        android:enabled="true"
        android:icon="@drawable/menu_3"
        android:title="@string/food"/>
    <item
        android:id="@+id/dress"
        android:enabled="true"
        android:icon="@drawable/menu_4"
        android:title="@string/dress"/>
</menu>